# trading_agents

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  CONTRIBUTING.md  LICENSE  PLAN.md  PLANNING.md  QUANT_V2_SKILL.md  README.md  REFACTOR_PLAN.md  SECURITY.md  SKILL.md  SYSTEM_GUIDE.md  SYSTEM_PLAN.md  account.py  ai_analyzer.py  ai_quant_plan.md  ai_stock_picker.py  backtest.py  backtest_v2.py  baostock_fetcher.py  bootstrap_runtime.py  daily_runner_v2.py  data_fetcher.py  debug_notify.py  dl_factor_model.py  factor_data.py  factor_engine_v2.py  feishu_notify.py  fundamental_loader.py  global_stock_picker.py  historical_loader.py  ifind_fetcher.py  kline_health.py  kline_sanitize.py  kline_service.py  llm_analyst.py  main.py  mainline_pool.py  (+31 more)
agent_runtime/: __init__.py  memory_store.py  orchestrator.py  trading_memory_bridge.py
config/: settings.yaml
core/: ai_analyzer.py  market_state.py  memory.py
dashboard/: __init__.py  app.py
data/: alert_log.jsonl  market_20260514.json  monitor_state.json  stock_industry.json  stock_pool.json
docs/: ARCHITECTURE.md  DATA_AND_RISK.md  DL_FACTOR_PLAN.md  GETTING_STARTED.md  OPERATIONS.md
knowledge_base/: ai_tools.md  daily_20260525.json  daily_20260528.json  daily_20260529.json  daily_pick_2026-06-01.json  daily_pick_2026-06-01.md  daily_pick_2026-06-02.json  daily_pick_2026-06-02.md  daily_pick_2026-06-04.json  daily_pick_2026-06-04.md  daily_pick_2026-06-05.json  daily_pick_2026-06-05.md  daily_pick_2026-06-08.json  daily_pick_2026-06-08.md  daily_pick_2026-06-09.json  daily_pick_2026-06-09.md  daily_pick_2026-06-17.json  daily_pick_2026-06-17.md  daily_pick_2026-06-18.json  daily_pick_2026-06-18.md  daily_pick_2026-06-22.json  daily_pick_2026-06-22.md  daily_pick_2026-06-23.json  daily_pick_2026-06-23.md  daily_pick_2026-06-24.json  daily_pick_2026-06-24.md  daily_pick_2026-06-25.json  daily_pick_2026-06-25.md  daily_pick_2026-06-26.json  daily_pick_2026-06-26.md  daily_report_20260525.txt  daily_report_20260528.txt  daily_report_20260529.txt  theme_state.json  trading_memory.db
reports/: multi_backtest_20260527_095858.txt  multi_backtest_20260528_202628.txt  (+11 more)
(+74 files in other folders)
