[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "a-share-trading-agents"
version = "0.2.0"
description = "Local-first A-share quantitative research, paper trading, and agent review system"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [
  { name = "Trading Agents contributors" }
]
keywords = ["quantitative-trading", "a-share", "paper-trading", "agents", "backtesting"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.11",
  "Topic :: Office/Business :: Financial :: Investment",
]
dependencies = [
  "numpy==1.26.4",
  "pandas==2.2.2",
  "PyYAML==6.0.2",
  "Flask==3.0.3",
  "requests==2.32.3",
  "baostock==0.8.9",
  "akshare==1.18.64",
]

[project.urls]
Homepage = "https://github.com/onmygame2/trading_agents"
Repository = "https://github.com/onmygame2/trading_agents"
Issues = "https://github.com/onmygame2/trading_agents/issues"

[tool.setuptools]
py-modules = [
  "ai_analyzer",
  "ai_stock_picker",
  "backtest_v2",
  "baostock_fetcher",
  "bootstrap_runtime",
  "daily_runner_v2",
  "dl_factor_model",
  "factor_data",
  "factor_engine_v2",
  "global_stock_picker",
  "historical_loader",
  "kline_health",
  "kline_sanitize",
  "kline_service",
  "main",
  "mainline_pool",
  "market_data",
  "market_filter",
  "market_news",
  "message_screener",
  "minute_kline",
  "ml_stock_selector",
  "monitor",
  "optimize_weekly",
  "paper_trading_v2",
  "scheduler_status",
  "sector_pool",
  "sina_fetcher",
  "stock_pool_builder",
  "task_runner",
  "theme_engine",
  "trade_engine_v2",
  "trading_calendar",
  "trading_session",
  "update_kline",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["agent_runtime*", "core*", "dashboard*", "strategies_v2*"]

[tool.setuptools.package-data]
dashboard = ["templates/*.html", "static/css/*.css", "static/js/*.js"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

